--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hand_pose_recognition",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nvanha.github.io/hand_pose_recognition/",
+  "homepage": "https://beastaman.github.io/hand_pose_recognition/",
   "dependencies": {
     "@tensorflow-models/handpose": "^0.0.7",
     "@tensorflow/tfjs": "^3.8.0",
